--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -214,10 +214,10 @@
 /*------------------------------- 2. Footer ----*/
 footer {
   grid-column: span 12;
-  padding: 4rem 0;
+  padding: 4rem 2rem;
 }
 
-.footer-top {
+.footer-top, .footer-middle, .footer-bottom {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -237,8 +237,40 @@ footer {
           align-items: center;
 }
 
+.footer-top__left span {
+  margin-left: 1rem;
+}
+
 .footer-top__left span:first-of-type {
   margin-right: 0.8rem;
+}
+
+.footer-middle {
+  padding: 4rem 0;
+}
+
+.footer-middle__links {
+  margin-left: 2rem;
+}
+
+.footer-middle__links:first-of-type {
+  margin-left: 0;
+}
+
+.footer-middle__links h3 {
+  margin-bottom: 1.5rem;
+}
+
+.footer-middle__links ul li {
+  line-height: 1.7rem;
+}
+
+.footer-middle__links a:hover {
+  text-decoration: underline;
+}
+
+.footer-bottom p {
+  font-size: 0.8rem;
 }
 
 /*----------------------------------------------------
@@ -263,7 +295,7 @@ a {
 .nav__link {
   padding: 1rem;
   text-transform: uppercase;
-  font-size: 0.9em;
+  font-size: 0.9rem;
   font-weight: 700;
 }
 
@@ -281,7 +313,7 @@ button {
   padding: 0.9rem 1.5rem;
   cursor: pointer;
   font-family: "Poppins", sans-serif;
-  font-size: 1em;
+  font-size: 1rem;
   font-weight: 700;
 }
 
@@ -359,11 +391,11 @@ h1, h2, h3 {
 }
 
 h2 {
-  font-size: 3em;
+  font-size: 3rem;
 }
 
 h3 {
-  font-size: 1.5em;
+  font-size: 1.5rem;
 }
 
 .header-margin {
@@ -421,7 +453,11 @@ hr {
 .footer-top__icon {
   width: 50px;
   height: 50px;
-  margin: 0 0.5rem;
+  margin-left: 1rem;
+}
+
+.footer-top__icon:first-of-type {
+  margin-left: 0;
 }
 
 @-webkit-keyframes bg-scale {
@@ -509,6 +545,28 @@ hr {
   h2 {
     font-size: 2rem;
   }
+  .footer-top__left {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer-top__left .footer-top__icon {
+    margin-bottom: 0.5rem;
+  }
+  .footer-top__left span {
+    margin-left: 0rem;
+  }
+  .footer-top__left span:first-of-type {
+    margin-right: 0;
+    margin-bottom: 1.5rem;
+  }
+  .footer-top__icon {
+    margin: 0;
+  }
 }
 
 @media (max-width: 767px) {
@@ -545,6 +603,25 @@ hr {
   .about__img {
     min-height: 40vh;
     margin-left: 0;
+  }
+  .footer-top, .footer-middle, .footer-bottom {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .footer-top__left {
+    margin-bottom: 1.5rem;
+  }
+  .footer-middle__links {
+    margin: 1rem 0;
+    text-align: center;
   }
 }
 
@@ -678,6 +755,10 @@ body {
 /*--------------------------------------------------------------------------------------------*/
 p {
   line-height: 1.5rem;
+}
+
+small {
+  font-size: 0.8rem;
 }
 
 /*------------------------------- 3. Navigation ----*/
