--- a/src/styles/scss/_components.scss
+++ b/src/styles/scss/_components.scss
@@ -22,7 +22,7 @@ a {
 .nav__link {
     padding: 1rem;
     text-transform: uppercase;
-    font-size: 0.9em;
+    font-size: 0.9rem;
     font-weight: 700;
 
     &:hover {
@@ -40,7 +40,7 @@ button {
     padding: 0.9rem 1.5rem;
     cursor: pointer;
     font-family: "Poppins", sans-serif;
-    font-size: 1em;
+    font-size: 1rem;
     font-weight: 700;
 
     &:hover {
@@ -117,12 +117,12 @@ h1 {
 
 h2 {
     @extend h1;
-    font-size: 3em;
+    font-size: 3rem;
 }
 
 h3 {
     @extend h1;
-    font-size: 1.5em;
+    font-size: 1.5rem;
 }
 
 .header-margin {
@@ -177,5 +177,9 @@ hr {
 .footer-top__icon {
     width: 50px;
     height: 50px;
-    margin: 0 0.5rem;
+    margin-left: 1rem;
+
+    &:first-of-type {
+        margin-left: 0;
+    }
 }
