--- a/src/styles/scss/_layout.scss
+++ b/src/styles/scss/_layout.scss
@@ -172,7 +172,7 @@
 /*------------------------------- 2. Footer ----*/
 footer {
     grid-column: span 12;
-    padding: 4rem 0;
+    padding: 4rem 2rem;
 }
 
 .footer-top {
@@ -186,7 +186,44 @@ footer {
     display: flex;
     align-items: center;
 
+    & span {
+        margin-left: 1rem;
+    }
+
     & span:first-of-type {
         margin-right: 0.8rem;
+    }
+}
+
+.footer-middle {
+    @extend .footer-top;
+    padding: 4rem 0;
+}
+
+.footer-middle__links {
+    margin-left: 2rem;
+
+    &:first-of-type {
+        margin-left: 0;
+    }
+    
+    & h3 {
+        margin-bottom: 1.5rem;
+    }
+
+    & ul li {
+        line-height: 1.7rem;
+    }
+
+    & a:hover {
+        text-decoration: underline;
+    }
+}
+
+.footer-bottom {
+    @extend .footer-top;
+
+    & p {
+        font-size: 0.8rem;
     }
 }
