--- a/src/styles/scss/_media-queries.scss
+++ b/src/styles/scss/_media-queries.scss
@@ -12,6 +12,28 @@
     h2 {
         font-size: 2rem;
     }
+
+    .footer-top__left {
+        display: flex;
+        flex-direction: column;
+
+        & .footer-top__icon {
+            margin-bottom: 0.5rem;
+        }
+
+        & span {
+            margin-left: 0rem;
+        }
+    
+        & span:first-of-type {
+            margin-right: 0;
+            margin-bottom: 1.5rem;
+        }
+    }
+
+    .footer-top__icon {
+        margin: 0;
+    }
 }
 
 // Small devices (landscape phones, less than 768px)
@@ -44,6 +66,21 @@
     .about__img {
         min-height: 40vh;
         margin-left: 0;
+    }
+
+    .footer-top {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-top__left {
+        margin-bottom: 1.5rem;
+    }
+
+    .footer-middle__links {
+        margin: 1rem 0;
+        text-align: center;
     }
 }
 
