--- a/src/styles/scss/styles.scss
+++ b/src/styles/scss/styles.scss
@@ -36,6 +36,10 @@ p {
     line-height: 1.5rem;
 }
 
+small {
+    font-size: 0.8rem;
+}
+
 /*------------------------------- 3. Navigation ----*/
 
 /*-- 3.1. Navbar Top --*/
